--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react": "18.2.0",
     "react-native": "0.73.7",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-permissions": "^4.1.5",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
